fixed ContentContainer alignment

--- a/_resources/_styles/base.styl
+++ b/_resources/_styles/base.styl
@@ -42,7 +42,7 @@ img {
 }
 @media tablet {
   .ContentContainer {
-    margin: 7rem 6rem 0 6rem;
+    margin: 0 6rem;
     padding: 6rem;
     max-width: 375px;
     min-width:375px;
