--- a/public/master.css
+++ b/public/master.css
@@ -546,7 +546,7 @@ img {
 }
 @media (min-width: 48em) {
   .ContentContainer {
-    margin: 7rem 6rem 0 6rem;
+    margin: 0 6rem;
     padding: 6rem;
     max-width: 375px;
     min-width: 375px;
